# AntigravityRemote

./: .env.example  .gitignore  .vscodeignore  CHANGELOG.md  CODE_DOCUMENTATION.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SOCIAL_MEDIA.md  dev-server.js  extension.js  generate_ssl.js  install_context_menu.bat  install_context_menu.sh  launch-with-cdp.bat  launch.bat  launcher.py  log.txt  package-lock.json  package.json  restart-antigravity.bat  run.bat  server.js  start-antigravity.bat  start.bat  start_ag_phone_connect.bat  start_ag_phone_connect.sh  start_ag_phone_connect_web.bat  start_ag_phone_connect_web.sh  targets.json  tauri-server.mjs  tsconfig.json
public/: app.js  index.html  login.html  manifest.json  styles.css  sw.js
public/css/: style.css
public/js/: app.js
src/: extension.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/middleware/: auth.ts  security.ts
src/server/: index.ts
src/services/: antigravity.ts  cdp.ts
src/test/: injectFile.test.ts  injectMessage.test.ts  server.test.ts
src/types/: index.ts
src/utils/: index.ts
