[package]
name = "antigravity-remote"
version = "1.0.0"
description = "Antigravity Remote Desktop - Control Antigravity AI from your phone"
authors = ["AntigravityRemote"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
